--- a/app/views/track_select/track_select.html.erb
+++ b/app/views/track_select/track_select.html.erb
@@ -8,7 +8,6 @@
       <th>Номер</th>
       <th>Имя</th>
       <th>Время</th>
-      <th>Длительность</th>
       <th>Мин. высота</th>
       <th>Макс. высота</th>
     </tr>
@@ -17,10 +16,7 @@
     <% @tracklist.each_with_index do |item, index| %>
       <tr>
         <td><%= index %></td>
-        <td><%= link_to item, {:controller => 'tracks', :action => 'new', :name => @name,
-                                :cache_id => @key, :index => index, :suit => @suit, 
-                                :location => @location, :comment => @comment} %></td>
-        <td></td>
+        <td><%= link_to item, {:controller => 'tracks', :action => 'new', :cache_id => @key, :index => index} %></td>
         <td></td>
         <td></td>
         <td></td>
