--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -6,6 +6,7 @@
         
       var charts_data = <%= @track.get_charts_data %>;
       var max_height = <%= @track.get_max_height %>;
+      var charts_array = [];
 
       $(document).ready(function() {
 
@@ -23,9 +24,10 @@
           }
         });
 
-        $("#elevation_distance_chart").highcharts({
+        charts_array[0] = new Highcharts.Chart({
           chart: {
-            type: "spline"
+            type: 'spline',
+            renderTo: 'elevation_distance_chart'
           },
           title: {
             text: "Пройдено по высоте/по горизонту"
@@ -34,6 +36,13 @@
             series: {
               marker: {
                 radius: 1
+              },
+              point: {
+                events: {
+                  mouseOver: function () {
+                    syncTooltip(this.series.chart.container, this.x);
+                    }
+                }
               }
             }
           },
@@ -71,9 +80,10 @@
           }]  
         });
 
-        $("#speeds_chart").highcharts({
+        charts_array[1] = new Highcharts.Chart({
           chart: {
-            type: 'spline'
+            type: 'spline',
+            renderTo: 'speeds_chart'
           },
           title: {
             text: "Вертикальная и горизонтальная скорость"
@@ -116,9 +126,10 @@
           }]
         });
 
-        $("#glideratio_chart").highcharts({
+        charts_array[2] = new Highcharts.Chart({
           chart: {
-            type: 'spline'
+            type: 'spline',
+            renderTo: 'glideratio_chart'
           },
           title: {
             text: "Качество полета"
@@ -243,6 +254,14 @@
         $('#p_max_gr').text('...' + max_gr.toFixed(2).toString());
         $('#p_avg_gr').text((Math.round(dist / fl_time * 3.6) / Math.round(elev / fl_time * 3.6)).toFixed(2).toString());
 
+      };
+      
+      function syncTooltip(container, p) {
+        var i;
+        //for (i = 0; i < charts_array.length; i++) {
+        //  if (container.id != charts_array[i].container.id) 
+        //    charts_array[i].tooltip.refresh(charts_array[i].series[0].data[p]);
+        //}
       };
 
     });
