--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -4,9 +4,27 @@
 
     $(function() { 
         
+      // Массив хэшей содержащий данные трека
       var charts_data = <%= @track.get_charts_data %>;
+      // Максимальная высота трека
       var max_height = <%= @track.get_max_height %>;
-      var charts_array = [];
+      
+      var range_from = max_height;
+      var range_to = 0;
+      
+      $('#toggle_multi').click(function(e) {
+        e.preventDefault();
+        $('#single-chart').hide();
+        $('#multiple-charts').show();
+        $.cookie('view_type', 'multi', { expires: 365, path: '/' });
+      });
+
+      $('#toggle_single').click(function(e) {
+        e.preventDefault();
+        $('#multiple-charts').hide();
+        $('#single-chart').show();
+        $.cookie('view_type', 'single', { expires: 365, path: '/' });
+      });
 
       $(document).ready(function() {
 
@@ -20,14 +38,16 @@
           from: max_height,
           to: 0,
           onFinish: function (obj) {      // callback is called on slider action is finished
-            set_chart_data(obj.fromNumber, obj.toNumber);
+            range_from = obj.fromNumber;
+            range_to = obj.toNumber;
+            set_chart_data();
           }
         });
 
-        charts_array[0] = new Highcharts.Chart({
+        $('#elevation_distance_chart').highcharts({
           chart: {
             type: 'spline',
-            renderTo: 'elevation_distance_chart'
+            marginLeft: 70
           },
           title: {
             text: "Пройдено по высоте/по горизонту"
@@ -80,10 +100,10 @@
           }]  
         });
 
-        charts_array[1] = new Highcharts.Chart({
+        $('#speeds_chart').highcharts({
           chart: {
             type: 'spline',
-            renderTo: 'speeds_chart'
+            marginLeft: 70
           },
           title: {
             text: "Вертикальная и горизонтальная скорость"
@@ -126,10 +146,10 @@
           }]
         });
 
-        charts_array[2] = new Highcharts.Chart({
+        $('#glideratio_chart').highcharts({
           chart: {
             type: 'spline',
-            renderTo: 'glideratio_chart'
+            marginLeft: 70
           },
           title: {
             text: "Качество полета"
@@ -150,7 +170,7 @@
           yAxis: {
             min: 0,
             title: {
-              text: null
+              text: ' ' 
             }
           },
           credits: {
@@ -163,12 +183,119 @@
             enabled: false,
           }
         });
-        
-        set_chart_data(4000, 0);
+
+        $('#all_data_chart').highcharts({
+          chart: {
+            type: 'spline'
+          },
+          title: {
+            text: "Информация о полете"
+          },
+          plotOptions: {
+            series: {
+              marker: {
+                enabled: true,
+                radius: 1
+              }
+            }
+          },
+          yAxis: [{ //Speed yAxis
+            min: 0,
+            labels: {
+              style: { 
+                color: Highcharts.getOptions().colors[1]
+              }
+            },
+            title: {
+              text: "Скорость, Км/ч",
+              style: {
+                color: Highcharts.getOptions().colors[1]
+              }
+            }
+          },
+          { // Elev, dist yAxis
+            min: 0,
+            tickInterval: 500,
+            labels: {
+              style: {
+                color: Highcharts.getOptions().colors[0]
+              }
+            },
+            title: {
+              text: 'Высота, Расстояние, м',
+              style: {
+                color: Highcharts.getOptions().colors[0]
+              }
+            },
+            opposite: true
+          },
+          { // GR yAxis
+            min: 0,
+            max: 5,
+            tickInterval: 0.5,
+            labels: {
+              style: {
+                color: Highcharts.getOptions().colors[2]
+              }
+            },
+            title: {
+              text: 'Качество полета',
+              style: {
+                color: Highcharts.getOptions().colors[2]
+              }
+            },
+            opposite: true
+          }
+          ],
+          tooltip: {
+            shared: true,
+            crosshairs: true,
+            valueDecimals: 2
+          },
+          credits: {
+            enabled: false
+          },
+          series: [{
+            name: "Гор. Скорость",
+            yAxis: 0
+          },
+          {
+            name: "Верт. Скорость",
+            yAxis: 0
+          },
+          {
+            name: "Качество полета",
+            yAxis: 2
+          },
+          {
+            name: "Высота",
+            yAxis: 1
+          },
+          {
+            name: "Дистанция",
+            yAxis: 1
+          },
+          {
+            name: "Пройдено по высоте",
+            yAxis: 1
+          }]
+        });
+
+       
+        set_chart_data();
+
+        view_type = $.cookie('view_type');
+        if (view_type == 'single') {
+          $('#single-chart').show();
+          $('#multiple-charts').hide();
+        } else {
+          $('#single-chart').hide();
+          $('#multiple-charts').show();
+        }
 
       });
 
-      function set_chart_data(max_val, min_val) {
+      function set_chart_data() {
 
         var dist_data = [];
         var elev_data = [];
@@ -194,8 +321,8 @@
         var dist = 0;
         var elev = 0;
 
-        max_val = typeof max_val !== 'undefined' ? max_val : 100000;
-        min_val = typeof min_val !== 'undefined' ? min_val : 0;
+        max_val = typeof range_from !== 'undefined' ? range_from : 100000;
+        min_val = typeof range_to !== 'undefined' ? range_to : 0;
 
         for (var index in charts_data) {
 
@@ -238,6 +365,14 @@
         var gr_chart = $('#glideratio_chart').highcharts();
         gr_chart.series[0].setData(gr);
 
+        var ad_chart = $('#all_data_chart').highcharts();
+        ad_chart.series[0].setData(h_speed);
+        ad_chart.series[1].setData(v_speed);
+        ad_chart.series[2].setData(gr);
+        ad_chart.series[3].setData(heights_data);
+        ad_chart.series[4].setData(dist_data);
+        ad_chart.series[5].setData(elev_data);
+
         $('#dd_distance').text(dist.toString() + ' м');
         $('#dd_elevation').text(elev.toString() + ' м');
         $('#dd_fl_time').text(fl_time.toString() + ' с');
@@ -270,7 +405,23 @@
 
 
   <div class="page-header">
-    <h1><%= @track.name %> | Трек #<%= @track.id %> <small>Вингсьют: <%= @track.suit %></small> </h1>
+    <div class="row">
+      <div class="col-md-11">
+        <h1><%= @track.name %> | Трек #<%= @track.id %> <small>Вингсьют: <%= @track.suit %></small></h1>
+      </div>
+      <div class="dropdown-container col-md-1">
+        <div class="dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+            <span class="glyphicon glyphicon-cog"></span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="dropdownMenu1">
+            <li role="presentation" class="dropdown-header">Отображение показателей</li>
+            <li role="presentation"><a id="toggle_multi" role="menuitem" tabindex="-1" href="">На разных графиках</a></li>
+            <li role="presentation"><a id="toggle_single" role="menuitem" tabindex="-1" href="">На одном графике</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="row">
@@ -318,9 +469,14 @@
     </div>
   </div>
 
-  <div id="glideratio_chart" style="width:100%; height:250px"></div>
-  <div id="speeds_chart" style="width:100%; height:400px;"></div>
-  <div id="elevation_distance_chart" style="width:100%; height:400px;"></div>
+  <div id="multiple-charts">
+    <div id="glideratio_chart" style="width:100%; height:250px"></div>
+    <div id="speeds_chart" style="width:100%; height:400px;"></div>
+    <div id="elevation_distance_chart" style="width:100%; height:400px;"></div>
+  </div>
+  <div id="single-chart">
+    <div id="all_data_chart" style="width:100%; height:600px"></div>
+  </div>
 
   <blockquote>
     <small><%= @track.comment %></small>
