change colors back

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -254,26 +254,25 @@
           {
             name: "Качество полета",
             yAxis: 2,
-            color: Highcharts.getOptions().colors[3]
+            color: Highcharts.getOptions().colors[1]
           },
           {
             name: "Высота",
             yAxis: 1,
-            color: Highcharts.getOptions().colors[5]
+            color: '#aaa'
           },
           {
             name: "Дистанция",
             yAxis: 1,
-            color: Highcharts.getOptions().colors[6]
+            color: Highcharts.getOptions().colors[5]
           },
           {
             name: "Пройдено по высоте",
             yAxis: 1,
-            color: Highcharts.getOptions().colors[4]
+            color: Highcharts.getOptions().colors[3]
           }]
         });
 
-       
         set_chart_data();
 
         view_type = $.cookie('view_type');
