select track heights up and down

--- a/app/views/track_select/track_select.html.erb
+++ b/app/views/track_select/track_select.html.erb
@@ -16,7 +16,7 @@
       <th>Номер</th>
       <th>Имя</th>
       <th>Пройдено по высоте</th>
-      <th>Продолжительность</th>
+      <th>Количество точек</th>
     </tr>
   </thead>
   <tbody>
@@ -25,7 +25,7 @@
         <td class="text-info"><%= index %></td>
         <td class="text-info"><%= item['name'] %></td>
         <td class="text-info"><%= item['elev'] %> м</td>
-        <td class="text-info"><%= item['duration'] %> с</td>
+        <td class="text-info"><%= item['points_count'] %></td>
       </tr>
     <% end %>
   </tbody>
